# visualization.shadertoy

./: .gitignore  .travis.yml  CMakeLists.txt  FindGLEW.cmake  FindOpenGLES.cmake  FindOpenGLES2.cmake  Jenkinsfile  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog  changelog.in  control  copyright  kodi-visualization-shadertoy.install  rules
depends/common/glm/: glm.sha256
depends/common/jsoncpp/: flags.txt  jsoncpp.txt
depends/osx/glew/: 01-fix-makefile.patch  CMakeLists.txt  glew.txt
depends/osx/glm/: flags-arm64.txt  flags-x86_64.txt  flags.txt  glm.txt
depends/windows/angle/: 0001-fix-uwp.patch  CMakeLists.txt  angle.sha256  angle.txt  flags.txt
lib/: kodi-kissfft-note.txt
lib/kissfft/: CMakeLists.txt
src/: PresetsLoader.cpp  PresetsLoader.h  main.cpp  main.h  maindx.cpp
visualization.shadertoy/: addon.xml  addon.xml.in  changelog.txt  help-view.py
visualization.shadertoy/resources/: 2Dspectrum.frag.glsl  audioeclipse.frag.glsl  audioreaktive.frag.glsl  audiovisual.frag.glsl  beatingcircles.frag.glsl  bpm.frag.glsl  circlewave.frag.glsl  circuits.frag.glsl  coloredbars.frag.glsl  cubescape.frag.glsl  dancingmetalights.frag.glsl  discotunnel.frag.glsl  electricpulse.frag.glsl  fractalland.frag.glsl  gameboy.frag.glsl  io.frag.glsl  kaleidoscopevisualizer.frag.glsl  ledspectrum.frag.glsl  ledspectrumanalyzer.frag.glsl  nyancat.frag.glsl  polarbeats.frag.glsl  presets.json  presets.json.md  presets_GLES.json  ribbons.frag.glsl  settings.xml  simplicitygalaxy.frag.glsl  soundflower.frag.glsl  soundsinuswave.frag.glsl  symmetricalsound.frag.glsl  twistedrings.frag.glsl  undulantspectre.frag.glsl  visualizer.frag.glsl  volumetriclines.frag.glsl  wavesremix.frag.glsl
visualization.shadertoy/resources/language/resource.language.af_za/: strings.po
visualization.shadertoy/resources/language/resource.language.am_et/: strings.po
visualization.shadertoy/resources/language/resource.language.ar_sa/: strings.po
visualization.shadertoy/resources/language/resource.language.az_az/: strings.po
visualization.shadertoy/resources/language/resource.language.be_by/: strings.po
visualization.shadertoy/resources/language/resource.language.bg_bg/: strings.po
visualization.shadertoy/resources/language/resource.language.bs_ba/: strings.po
visualization.shadertoy/resources/language/resource.language.ca_es/: strings.po
visualization.shadertoy/resources/language/resource.language.cs_cz/: strings.po
visualization.shadertoy/resources/language/resource.language.cy_gb/: strings.po
visualization.shadertoy/resources/language/resource.language.da_dk/: strings.po
visualization.shadertoy/resources/language/resource.language.de_de/: strings.po
visualization.shadertoy/resources/language/resource.language.el_gr/: strings.po
visualization.shadertoy/resources/language/resource.language.en_au/: strings.po
visualization.shadertoy/resources/language/resource.language.en_gb/: strings.po
visualization.shadertoy/resources/language/resource.language.en_nz/: strings.po
visualization.shadertoy/resources/language/resource.language.en_us/: strings.po
visualization.shadertoy/resources/language/resource.language.eo/: strings.po
visualization.shadertoy/resources/language/resource.language.es_ar/: strings.po
visualization.shadertoy/resources/language/resource.language.es_es/: strings.po
visualization.shadertoy/resources/language/resource.language.es_mx/: strings.po
visualization.shadertoy/resources/language/resource.language.et_ee/: strings.po
visualization.shadertoy/resources/language/resource.language.eu_es/: strings.po
visualization.shadertoy/resources/language/resource.language.fa_af/: strings.po
visualization.shadertoy/resources/language/resource.language.fa_ir/: strings.po
visualization.shadertoy/resources/language/resource.language.fi_fi/: strings.po
visualization.shadertoy/resources/language/resource.language.fo_fo/: strings.po
visualization.shadertoy/resources/language/resource.language.fr_ca/: strings.po
visualization.shadertoy/resources/language/resource.language.fr_fr/: strings.po
visualization.shadertoy/resources/language/resource.language.gl_es/: strings.po
visualization.shadertoy/resources/language/resource.language.he_il/: strings.po
visualization.shadertoy/resources/language/resource.language.hi_in/: strings.po
visualization.shadertoy/resources/language/resource.language.hr_hr/: strings.po
visualization.shadertoy/resources/language/resource.language.hu_hu/: strings.po
visualization.shadertoy/resources/language/resource.language.id_id/: strings.po
visualization.shadertoy/resources/language/resource.language.is_is/: strings.po
visualization.shadertoy/resources/language/resource.language.it_it/: strings.po
visualization.shadertoy/resources/language/resource.language.ja_jp/: strings.po
visualization.shadertoy/resources/language/resource.language.ko_kr/: strings.po
visualization.shadertoy/resources/language/resource.language.lt_lt/: strings.po
visualization.shadertoy/resources/language/resource.language.lv_lv/: strings.po
visualization.shadertoy/resources/shaders/: audioeclipse.frag.glsl  audioreaktive.frag.glsl  audiovisual.frag.glsl  beatingcircles.frag.glsl  bpm.frag.glsl  circlewave.frag.glsl  circuits.frag.glsl  coloredbars.frag.glsl  cubescape.frag.glsl  dancingmetalights.frag.glsl  discotunnel.frag.glsl  electricpulse.frag.glsl  fractalland.frag.glsl  gameboy.frag.glsl  input.frag.glsl  io.frag.glsl  kaleidoscopevisualizer.frag.glsl  ledspectrum.frag.glsl  main_display_GL.frag.glsl  main_display_GL.vert.glsl  main_display_GLES.frag.glsl  main_display_GLES.vert.glsl  main_shadertoy_GL.vert.glsl  main_shadertoy_GLES.vert.glsl  main_test.frag.glsl  nyancat.frag.glsl  revision2015.frag.glsl  ribbons.frag.glsl  simplicitygalaxy.frag.glsl  soundsinuswave.frag.glsl  spectrometer.frag.glsl  symmetricalsound.frag.glsl  twistedrings.frag.glsl  undulantspectre.frag.glsl  volumetriclines.frag.glsl  wavesremix.frag.glsl
(+27 files in other folders)
